Homework3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerwebapp
  labels:
    app: dockerwebapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dockerwebapp
  template:
    metadata:
      labels:
        app: dockerwebapp
    spec:
      containers:
      - name: dockerwebapp
        image: flash1200/dockerwebapp:firsttry
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
