Homework3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockerwebapp
  labels:
    app: dockerwebapp
spec:
  type: LoadBalancer
  ports:
  - name: dockerwebapp-http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: dockerwebapp-https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: dockerwebapp
